@@ -1,3 +1,11 @@
+2011-12-11 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-add-provide-to-file): New.
+	(epackage-devel-generate-autoloads): Use
+	`epackage-add-provide-to-buffer'.
+	(epackage-devel-compose-package-dir): Use
+	`epackage-add-provide-to-buffer'.
+
 2011-12-10 Sun  Jari Aalto  <jari.aalto@cante.net>
 
         * epackage.el (epackage-devel-template-directory):
@@ -6,7 +14,7 @@
         (epackage-devel-compose-1-interactive): New.
         (epackage-devel-compose-main): Simplify.
 	(epackage-devel-generate-loaddefs): Write provide statement.
-	(epackage-add-provide): New.
+	(epackage-add-provide-to-buffer): New.
 
 2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>
 
